<resources>
    <string name="app_name">ActorsDataBaseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="add_the_actor">Add the actor</string>
    <string name="actors_id">Actors ID:</string>
    <string name="movie_name">movie name</string>
    <string name="movie_rate">movie rate</string>
    <string name="movie_year">movie year</string>
    <string name="add_a_movie">add a movie</string>
    <string name="actors">Actors</string>
    <string name="movies">Movies</string>
    <string name="actor_name">actor name</string>
    <string name="actor_id">Actor Id</string>
</resources>