<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="400dp"
    android:layout_height="300dp">

    <TextView
        android:id="@+id/actorsIDTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:padding="@dimen/_16dp"
        android:text="@string/actors_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actorsIdEditableTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:padding="@dimen/_16dp"
        android:text="@string/actors_id"
        app:layout_constraintBottom_toBottomOf="@id/actorsIDTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/actorsIDTextView"
        app:layout_constraintTop_toTopOf="@id/actorsIDTextView" />

    <EditText
        android:id="@+id/movieNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:hint="@string/movie_name"
        app:layout_constraintTop_toBottomOf="@id/actorsIdEditableTextView" />

    <EditText
        android:id="@+id/movieRateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_margin="@dimen/_8dp"
        android:hint="@string/movie_rate"
        app:layout_constraintTop_toBottomOf="@id/movieNameEditText" />

    <EditText
        android:id="@+id/movieYearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_margin="@dimen/_8dp"
        android:hint="@string/movie_year"
        app:layout_constraintTop_toBottomOf="@id/movieRateEditText" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addMovieFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:inputType="number"
        android:text="@string/add_a_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>