<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sql.ui.main_page.SqliteMainPageFragment">

    <TextView
        android:id="@+id/nameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_8dp"
        android:text="@string/name"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@id/nameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameTextview"
        app:layout_constraintTop_toTopOf="@id/nameTextview" />

    <TextView
        android:id="@+id/surNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="@string/surname"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/nameTextview"
        app:layout_constraintTop_toBottomOf="@id/nameTextview" />

    <EditText
        android:id="@+id/surNameEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@id/surNameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/surNameTextview"
        app:layout_constraintTop_toTopOf="@id/surNameTextview" />

    <TextView
        android:id="@+id/ageTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="@string/age"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/surNameTextview"
        app:layout_constraintTop_toBottomOf="@id/surNameTextview" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/ageTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ageTextview"
        app:layout_constraintTop_toTopOf="@id/ageTextview" />

    <TextView
        android:id="@+id/petNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="Pets name"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/ageTextview"
        app:layout_constraintTop_toBottomOf="@id/ageTextview"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/petNameEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@id/petNameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/petNameTextview"
        app:layout_constraintTop_toTopOf="@id/petNameTextview" />

    <TextView
        android:id="@+id/petAgeTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="Pets age"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/petNameTextview"
        app:layout_constraintTop_toBottomOf="@id/petNameTextview"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/petAgeEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/petAgeTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/petAgeTextview"
        app:layout_constraintTop_toTopOf="@id/petAgeTextview" />

    <TextView
        android:id="@+id/isSmartTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="Is smart?"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/petAgeTextview"
        app:layout_constraintTop_toBottomOf="@id/petAgeTextview"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/isSmartCheckBox"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@id/isSmartTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/isSmartTextview"
        app:layout_constraintTop_toTopOf="@id/isSmartTextview" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/add_the_actor"
        app:layout_constraintEnd_toEndOf="@id/isSmartCheckBox"
        app:layout_constraintStart_toStartOf="@id/isSmartTextview"
        app:layout_constraintTop_toBottomOf="@id/isSmartTextview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actorsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_margin="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addButton" />


</androidx.constraintlayout.widget.ConstraintLayout>