<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".room.ui.RoomMainPageFragment">

    <TextView
        android:id="@+id/roomNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_8dp"
        android:text="@string/name"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/roomNameEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@id/roomNameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/roomNameTextview"
        app:layout_constraintTop_toTopOf="@id/roomNameTextview" />

    <TextView
        android:id="@+id/roomSurNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="@string/surname"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/roomNameTextview"
        app:layout_constraintTop_toBottomOf="@id/roomNameTextview" />

    <EditText
        android:id="@+id/roomSurNameEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@id/roomSurNameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/roomSurNameTextview"
        app:layout_constraintTop_toTopOf="@id/roomSurNameTextview" />

    <TextView
        android:id="@+id/roomAgeTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="@string/age"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/roomSurNameTextview"
        app:layout_constraintTop_toBottomOf="@id/roomSurNameTextview" />

    <EditText
        android:id="@+id/roomAgeEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/roomAgeTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/roomAgeTextview"
        app:layout_constraintTop_toTopOf="@id/roomAgeTextview" />

    <TextView
        android:id="@+id/roomPetNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="Pets name"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/roomAgeTextview"
        app:layout_constraintTop_toBottomOf="@id/roomAgeTextview"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/roomPetNameEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@id/roomPetNameTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/roomPetNameTextview"
        app:layout_constraintTop_toTopOf="@id/roomPetNameTextview" />

    <TextView
        android:id="@+id/roomPetAgeTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="Pets age"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/roomPetNameTextview"
        app:layout_constraintTop_toBottomOf="@id/roomPetNameTextview"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/roomPetAgeEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/roomPetAgeTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/roomPetAgeTextview"
        app:layout_constraintTop_toTopOf="@id/roomPetAgeTextview" />

    <TextView
        android:id="@+id/roomIsSmartTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:text="Is smart?"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@id/roomPetAgeTextview"
        app:layout_constraintTop_toBottomOf="@id/roomPetAgeTextview"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/roomIsSmartCheckBox"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="@id/roomIsSmartTextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/roomIsSmartTextview"
        app:layout_constraintTop_toTopOf="@id/roomIsSmartTextview" />

    <Button
        android:id="@+id/roomAddButton"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/add_the_actor"
        app:layout_constraintEnd_toEndOf="@id/roomIsSmartCheckBox"
        app:layout_constraintStart_toStartOf="@id/roomIsSmartTextview"
        app:layout_constraintTop_toBottomOf="@id/roomIsSmartTextview" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/roomActorsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_margin="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roomAddButton" />

</androidx.constraintlayout.widget.ConstraintLayout>