<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp">

        <TextView
            android:id="@+id/itemNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/name"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/itemSurnameTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/surname"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="@id/itemNameTextView"
            app:layout_constraintStart_toEndOf="@id/itemNameTextView"
            app:layout_constraintTop_toTopOf="@id/itemNameTextView" />

        <TextView
            android:id="@+id/itemAgeTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/age"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="@id/itemSurnameTextview"
            app:layout_constraintStart_toEndOf="@id/itemSurnameTextview"
            app:layout_constraintTop_toTopOf="@id/itemSurnameTextview" />

        <TextView
            android:id="@+id/itemPetsNameTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/name"
            android:textSize="@dimen/_16sp"
            app:layout_constraintStart_toStartOf="@id/itemNameTextView"
            app:layout_constraintTop_toBottomOf="@id/itemNameTextView" />

        <TextView
            android:id="@+id/itemPetsAgeTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/age"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="@id/itemPetsNameTextview"
            app:layout_constraintStart_toEndOf="@id/itemPetsNameTextview"
            app:layout_constraintTop_toTopOf="@id/itemPetsAgeTextview" />

        <TextView
            android:id="@+id/itemIsSmartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/surname"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="@id/itemPetsAgeTextview"
            app:layout_constraintStart_toEndOf="@id/itemPetsAgeTextview"
            app:layout_constraintTop_toTopOf="@id/itemPetsNameTextview" />

        <CheckBox
            android:id="@+id/itemIsSmartCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/itemIsSmartTextView"
            app:layout_constraintStart_toEndOf="@id/itemIsSmartTextView"
            app:layout_constraintTop_toTopOf="@id/itemIsSmartTextView" />


        <ImageView
            android:id="@+id/addMovieImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toTopOf="@id/deleteActorImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/deleteActorImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/addPetImageView"
            app:layout_constraintStart_toStartOf="@id/addMovieImageView"
            app:layout_constraintTop_toBottomOf="@id/addMovieImageView" />

        <ImageView
            android:id="@+id/addPetImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pets"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/deleteActorImageView"
            app:layout_constraintStart_toStartOf="@id/deleteActorImageView"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
